best-practices/restrict_node_port/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict_node_port.yaml
assert:
- policy-assert.yaml
