best-practices/restrict_node_port/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-services.yaml
  shouldFail: false
- file: bad-service-nodeport.yaml
  shouldFail: true
